<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- UI element labels, texts -->
    <string name="app_name">STUNner</string>
    <string name="start">Stun it!</string>
    <string name="settings">Settings</string>
    <string name="bookmark">Saved Measurement</string>
    <string name="show_saved_measurements">Show saved measurements</string>
    <string name="image_description">This is an image.</string>
    <string name="show_list">Show list</string>
    <string name="show_map">Show map</string>
    <string name="warning" />
    <string name="delete_prompt">Are you sure you want to delete the selected discovery?</string>
    <string name="deleted_all">Are you sure you want to delete all elements?</string>
    <string name="empty">No saved measurements to display.</string>
    <string name="bookmark_added">Measurement added.</string>
    <string name="bookmark_removed">Measurement removed.</string>
    <!-- application level constants -->
    <string name="authority">hu.uszeged.inf.wlab.stunner.provider</string>
    <string name="account_type">hu.uszeged.inf.wlab.stunit</string>
    <string name="date_format">yyyy.MM.dd. kk:mm</string>
    <!-- Info texts and patterns -->
    <string name="pattern_active_connection">We are connected to {0}.\n</string>
    <string name="wifi">WiFi hotspot</string>
    <string name="mobile">Mobile network</string>
    <string name="pattern_broadcast_ssid">The active network {0} its SSID.\n</string>
    <string name="option_broadcasts_ssid">broadcasts</string>
    <string name="option_does_not_broadcast_ssid">does not broadcast</string>
    <string name="pattern_ssid">The SSID of the network is {0}.\n</string>
    <string name="pattern_link_speed">The speed of the active link is {0}.\n</string>
    <string name="pattern_mac_address">The MAC address of the network adapter is {0}.\n</string>
    <string name="pattern_signal_strength">The received signal strength (RSSI) is {0} dB.\n</string>
    <string name="pattern_local_ip">The local IP address is {0}.\n</string>
    <string name="pattern_public_ip">The public IP address is {0}.\n</string>
    <string name="firewall_blocks">Firewall blocks UDP</string>
    <string name="pattern_handles_connection">{0} handles connections.\n</string>
    <string name="port_restricted">Port restricted cone</string>
    <string name="restricted">Restricted cone</string>
    <string name="full">Full cone</string>
    <string name="symmetric">Symmetric cone</string>
    <string name="symmetric_firewall">Symmetric UDP Firewall</string>
    <string name="open_access">Open access to internet</string>
    <string name="no_connection">No internet connection!</string>
    <string name="did_not_start">Did not started network discovery</string>
    <string name="unknown">Unknown</string>
    <string name="pattern_roaming">Roaming on the current network: {0}.\n</string>
    <string name="pattern_data_connection">The type of the data connection is {0}.\n</string>
    <string name="pattern_carrier">The carrier is {0}.\n</string>
    <string name="error">An error occurred. Please try again.</string>
    <string name="connecting">Connection not yet established.</string>
    <string name="bookmarks">Saved Measurements</string>
    <string name="action_settings">Settings</string>
    <string name="pattern_short_local_ip">Local IP: {0}\n</string>
    <string name="pattern_shor_public_ip">Public IP: {0}\n</string>
    <string name="pattern_short_result">Result: {0}\n</string>
    <string name="pattern_short_location">Location: {0}\n</string>
    <string name="phone_local_ip">Local IP:</string>
    <string name="phone_mac">Wi-Fi MAC:</string>
    <string name="phone_carrier">Carrier:</string>
    <string name="phone_data_connection_type">Network Type:</string>
    <string name="disclaimer">Terms of use</string>
    <string name="mobile_data_connected">Connected via Cellular</string>
    <string name="wifi_connected">Connected via Wi-Fi</string>
    <string name="public_ip">Public IP:</string>
    <string name="nat_detected">NAT detected</string>
    <string name="stun_it">STUNit!</string>
    <string name="title_activity_test">Test</string>
    <string name="connecting_progress">connecting</string>
    <string name="link_speed_label">Wi-Fi Link Speed:</string>
    <string name="signal_strength_label">Wi-Fi Signal Strength:</string>
    <string name="test_failed_please_try_again">Test failed please try again!</string>
    <string name="stun_console">"stun# "</string>
    <string name="date">Date:</string>
    <string name="address">Address:</string>
    <string name="result">Result:</string>
    <string name="accept">"Accept"</string>
    <string name="deny">"Deny"</string>
    <string name="type">Connection Type:</string>
    <string name="ssid">Wi-Fi SSID:</string>
    <string name="na">N/A</string>
    <string name="network">Mobile Network Type:</string>
    <string name="provider">Carrier Name:</string>
    <string name="background_disclaimer">The application is running a background service which sends anonymous statistics to the server each time when there\'s a change in the connectivity. Do you agree with this?</string>
    <string name="pref_background_service_title">Background service</string>
    <string name="pref_background_service_summary">Allow background service to collect and send anonymous data on network state changes</string>
    <string name="pref_timeout_title">Request timeout</string>
    <string name="pref_timeout_summary">{0} milliseconds</string>
    <string name="pref_key_background">prefAllowBackground</string>
    <string name="parse_app_id">stunner_parse</string>
    <string name="pref_key_parse">prefAllowParseUpload</string>
    <string name="pref_parse_summary">Allow uploading more detailed logs to the Parse server</string>
    <string name="pref_parse_title">Parse upload</string>
    <string name="parse_server_url">http://yourParseServerUrl:port</string>
    <string name="background_restriction">Background restriction</string>
    <string name="background_restricted">This Application Restricted! Please remove restriction in Application menu under Battery usage.</string>
    <string name="empty_view">Your list is empty!</string>
</resources>
