<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/action_bookmark"
        android:checked="false"
        android:icon="@android:drawable/ic_menu_save"
        android:iconTintMode="multiply"
        android:title="@string/bookmark"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_show_bookmarks"
        android:title="@string/bookmarks"
        android:icon="@android:drawable/ic_input_get"
        app:showAsAction="always"/>
    <item 
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom"/>

</menu>